<resources>
    <string name="app_name">GamePlan</string>
    <string name="title_activity_posts">PostsActivity</string>
    <string name="title_all">Browse</string>
    <string name="title_attending">Attending</string>
    <string name="title_created_events">Created Posts</string>
    <string name="title_history">History</string>
    <string name="title_recommended">Recommended</string>

    <string-array name="category_array">
        <item>Ball Games</item>
        <item>Video Games</item>
        <item>Board Games</item>
        <item>Workout</item>
    </string-array>

    <string-array name="ball_games_array">
        <item>Soccer</item>
        <item>Football</item>
        <item>Basketball</item>
        <item>Foosball</item>
        <item>Tennis</item>
    </string-array>

    <string-array name="video_games_array">
        <item>Overwatch</item>
        <item>League Of Legends</item>
        <item>Call Of Duty</item>
        <item>Fortnite</item>
        <item>Mario Cart</item>
    </string-array>

    <string-array name="board_games_array">
        <item>Catan</item>
        <item>Clue</item>
        <item>Risk</item>
        <item>Talisman</item>
        <item>Monopoly</item>
    </string-array>

    <string-array name="workout_array">
        <item>Spinning</item>
        <item>Zumba</item>
        <item>Bicycling</item>
        <item>Yoga</item>
        <item>Running</item>
    </string-array>

    <string-array name="years_array">
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
    </string-array>

    <string-array name="months_array">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>

    <string-array name="day_30_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
    </string-array>

    <string-array name="day_31_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>

    <string-array name="day_28_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
    </string-array>

    <string-array name="hour_array">
        <item>00</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
    </string-array>

    <string-array name="minute_array">
        <item>00</item>
        <item>15</item>
        <item>30</item>
        <item>45</item>
    </string-array>

    <string-array name="city_array">
        <item>Haifa</item>
        <item>Tel-Aviv</item>
        <item>Jerusalem</item>
        <item>Netanya</item>
        <item>Beer-sheva</item>
        <item>Eilat</item>
        <item>Nahariya</item>
        <item>Qiryat-shemona</item>
    </string-array>

</resources>
